# python-template

./: .gitignore  README.md  pyproject.toml
src/: lambda_function.py
src/application/: services.py
src/application/ports/: input_port.py  output_port.py
src/domain/: models.py
src/infrastructure/repositories/: dumb_repo.py  dynamodb_repository.py
tests/: conftest.py  test_data_processor.py  test_lambda_function.py
